--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "animate.css": "^3.7.2",
+    "antd": "^4.0.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
@@ -15,6 +16,7 @@
     "react-bootstrap": "^0.32.4",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.8.6",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-mdl": "^1.11.0",
     "react-modal": "^3.8.1",
     "react-scripts": "3.0.1"
